sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:8: error: not found: value apresbleu
	while (apresbleu < avantBlanc) {
               ^